# eye-of-sauron

./: .gitignore  README.md
client/articles/: .env.example  .gitignore  TODO.md  go.mod  go.sum  makefile
client/articles/data/: .old  filters.txt  topics.txt
client/articles/src/: OPENROUTER_EMBEDDINGS_EXAMPLE.md  actions.go  cluster.go  clustering.go  filter.go  filters.txt  main.go  mark.go  order-clusters.go  order.go  types.go  utils.go
client/clustering-scratchpad/scratchpad-py/: hbdscan.py
client/tweets/src/: main.go
guides/: COMMON_CRAWL.md  LIMITATIONS.md  MANAGERS.md  PSQL.md  PSQL_AI.md  ROADMAP.md
guides/PSQL/: README.md  analyses.csv  makefile
guides/PSQL/sql/: clear_duplicates_ai.sql  clear_duplicates_main.sql  count_sources.sql  create_flags_table.sql  create_sources_ai_table.sql  create_sources_table.sql  table_sizes.sql  terminate_connections.sql
server/: .env.example  go.mod  go.sum  makefile
server/lib/filters/: filters.go  metafilters.go  pipeline.go
server/lib/llm/: llm.go  openrouter-notes.md
server/lib/outbound/: outbound.go  pg.go
server/lib/pgx/: main.go  save.go
server/lib/readability/: readability.go
server/lib/types/: types.go
server/scratchpad/: fetch_recent.go  test.go
server/sources/galerts/: fetchGoogleAlerts.go  filterAndExpandSource.go  galerts.service  main.go  makefile  saveSource.go
server/sources/template-python/: Makefile  README.md  fetch.py  filter_and_expand.py  lib_stubs.py  main.py  pyproject.toml  requirements.txt  save_source.py  template.service
server/systemd/: hn.service  potpourri.service
(+129 files in other folders)
