[project]
name = "template-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.0",
    "feedparser>=6.0.0",
    "lxml>=4.9.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
]
